# solana-security-template

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md
.github/workflows/: ci.yml
programs/account-close/: Cargo.toml  README.md
programs/account-close/src/: error.rs  initialize.rs  insecure.rs  lib.rs  secure.rs  state.rs  vulnerable.rs
programs/account-reloading/: Cargo.toml  README.md
programs/account-reloading/src/: error.rs  initialize.rs  lib.rs  secure.rs  state.rs  vulnerable.rs
programs/account-type-mismatch/: Cargo.toml  README.md
programs/account-type-mismatch/src/: insecure.rs  lib.rs  secure.rs  state.rs
programs/amm/: Cargo.toml  README.md
programs/amm/buggy-amm/: Cargo.toml
programs/amm/buggy-amm/src/: lib.rs  state.rs
programs/amm/buggy-amm/src/instructions/: deposit.rs  initialize.rs  swap.rs  withdraw.rs
programs/amm/secure-amm/: Cargo.toml
programs/amm/secure-amm/src/: lib.rs  state.rs
programs/amm/secure-amm/src/instructions/: deposit.rs  initialize.rs  swap.rs  withdraw.rs
programs/arithmetic-overflow/: Cargo.toml  README.md
programs/arithmetic-overflow/src/: error.rs  initialize.rs  insecure.rs  lib.rs  secure.rs  state.rs
programs/authority-transfer/: Cargo.toml  README.md
programs/authority-transfer/src/: error.rs  initialize.rs  lib.rs  secure.rs  state.rs  vulnerable.rs
programs/duplicate-accounts/: Cargo.toml  README.md
programs/duplicate-accounts/src/: error.rs  initialize.rs  lib.rs  secure.rs  state.rs  vulnerable.rs
programs/insecure-init/: Cargo.toml  README.md
programs/insecure-init/src/: error.rs  lib.rs  secure.rs  state.rs  vulnerable.rs
programs/owner-check/: Cargo.toml  README.md
programs/owner-check/src/: insecure.rs  lib.rs  secure.rs  state.rs
programs/p-escrow/: Cargo.toml  README.md
programs/p-escrow/src/: lib.rs  tests.rs
programs/p-escrow/src/instructions/: make.rs  mod.rs  refund.rs
programs/p-escrow/src/state/: mod.rs
programs/pda-security/: Cargo.toml  README.md
programs/pda-security/src/: error.rs  lib.rs  state.rs  vulnerable.rs
programs/pda-seeds/: Cargo.toml
programs/pda-seeds/src/: insecure.rs  lib.rs  secure.rs  state.rs
programs/remaining-accounts/: Cargo.toml  README.md
programs/remaining-accounts/src/: error.rs  initialize.rs  lib.rs  secure.rs  state.rs  vulnerable.rs
programs/signer-authorization/: README.md
programs/signer-authorization/src/: initialize.rs  insecure.rs  secure.rs
tests/: Cargo.toml  account_close.rs  account_griefing.rs  account_reloading.rs  account_type_mismatch.rs  amm.rs  arithmetic_overflow.rs  authority_transfer.rs  insecure_init.rs  owner_check.rs  p_escrow.rs  pda_seeds.rs  remaining_accounts.rs  signer_authorization.rs
tests/src/: lib.rs
