[package]
name = "security-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[[test]]
name = "signer_authorization"
path = "signer_authorization.rs"

[[test]]
name = "arithmetic_overflow"
path = "arithmetic_overflow.rs"

[[test]]
name = "owner_check"
path = "owner_check.rs"

[[test]]
name = "pda_seeds"
path = "pda_seeds.rs"

[[test]]
name = "account_close"
path = "account_close.rs"

[[test]]
name = "account_type_mismatch"
path = "account_type_mismatch.rs"

[[test]]
name = "p_escrow"
path = "p_escrow.rs"

[[test]]
name = "amm"
path = "amm.rs"

[[test]]
name = "account_griefing"
path = "account_griefing.rs"

[[test]]
name = "multisig_payer"
path = "multisig_payer.rs"

[[test]]
name = "insecure_init"
path = "insecure_init.rs"

[[test]]
name = "authority_transfer"
path = "authority_transfer.rs"

[[test]]
name = "remaining_accounts"
path = "remaining_accounts.rs"

[[test]]
name = "account_reloading"
path = "account_reloading.rs"

[dependencies]
# LiteSVM 0.6.1 with stable Solana 2.2.x crates
litesvm = "=0.6.1"
borsh = "1.5"

# Solana crates matching litesvm 0.6.1
solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-native-token = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-system-interface = "1.0.0"
serde_json = "1.0"
sha2 = "0.10"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
