[package]
name = "arithmetic-overflow"
description = "Demonstrates integer overflow/underflow vulnerability"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "arithmetic_overflow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
