[package]
name = "p-escrow"
description = "Pinocchio Escrow demonstrating token escrow vulnerabilities"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "p_escrow"

[features]
no-entrypoint = []
default = []
idl-build = []

[dependencies]
# Pinocchio 0.9.2 crates (matching accel-pinocchio-escrow)
pinocchio = "0.9.2"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
pinocchio-log = "0.5.1"

[dev-dependencies]
litesvm = "0.7.0"
litesvm-token = "0.7.0"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-native-token = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-account = "2.2.1"
